cabal-version:      2.4
name:               bluesky
version:            0.1.0.0
license:            Apache-2.0
author:             Kader Derk
maintainer:         kaderderk@gmail.com
Build-Type:         simple
copyright:          © 2021 Kader Koanda
License-files:      LICENSE

-- category:
extra-source-files: CHANGELOG.md


--executable bluesky
--    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
 --   build-depends:    base ^>=4.14.1.0
 --   hs-source-dirs:   app
 --   default-language: Haskell2010


library
  hs-source-dirs:      src
  exposed-modules:     Bluesky.Lottery
                 --    , Week05.Homework1
                 --    , Week05.Homework2
                 --    , Week05.NFT
                 --    , Week05.Signed
                     
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , freer-extras
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise